--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/QtArg"]
 	path = 3rdparty/QtArg
 	url = https://github.com/igormironchik/qtargparser.git
+[submodule "3rdparty/QtConfFile"]
+	path = 3rdparty/QtConfFile
+	url = https://github.com/igormironchik/qt-conf-file.git
