--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "3rdparty/QtArg"]
-	path = 3rdparty/QtArg
-	url = https://github.com/igormironchik/qtargparser.git
+[submodule "3rdparty/Args"]
+	path = 3rdparty/Args
+	url = https://github.com/igormironchik/args-parser.git
